# vk-chat-bot

./: .env_example  Dockerfile  Makefile  README.md  bot.py  bot_db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  vk_bot_db.db
